BE - Code smell fix